tests/cases_invalid/misc/fn_call_args_missing_comma/.expected
error: expected `)`
 --> ./cases_invalid/misc/fn_call_args_missing_comma/main.shd:2:10
  |
2 |     f(0. 1.);
  |          ^ here
  |
